# bmdl

./: CMakeLists.txt  README.md
cmake/: FindCustomSDL.cmake  FindDirectX.cmake  WorkingDirTemplate.vcxproj.user.in
examples/: CMakeLists.txt
examples/DirectX11/: Main.cpp
examples/OpenGL3/: Main.cpp  Shader.h
examples/Simple/: Main.cpp
examples/dependencies/glew/: glew.c
plugins/Blender/io_export_bmdl/: __init__.py  export_bmf.py
resources/: Angel.bmf  Cube.bmf  CubeSized.bmf  Pyramid.bmf
source/: CMakeLists.txt  bmdl.h  bmdl_common.h  bmdl_util.h
